# yi2voice2prompt

./: .env.example  .gitignore  README.md  USER_GUIDE.md  create-icon.py  index.html  package-lock.json  package.json  start-dev.bat  创建桌面快捷方式.ps1  启动Voice2Prompt.bat
scripts/: demo-record.ts
src/: App.tsx  modal-styles.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  main.rs
src/config/: defaults.json
src/lib/: audio.ts  format.ts  paste.ts
