[package]
name = "voice2prompt"
version = "0.1.0"
description = "Voice to text tool with OpenAI integration"
authors = ["you"]
license = ""
repository = ""
default-run = "voice2prompt"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "http-all", "clipboard-all", "shell-open", "fs-all", "global-shortcut-all", "system-tray"] }
tauri-plugin-positioner = { version = "1.0", features = ["system-tray"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
cpal = "0.15"
hound = "3.5"

[[bin]]
name = "voice2prompt"
path = "src/main.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
